--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
+    "nuqs": "^2.2.3",
+    "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
@@ -20,6 +23,7 @@
     "react-select": "^5.8.0",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.6",
+    "react-top-loading-bar": "^2.3.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
